<resources>
    <string name="app_name">Music Shop</string>
    <string name="select_item">Select Item</string>
    <string name="sale">Sale -30%</string>
    <string name="add_to_card">Add to card</string>
    <string name="hint_name">Your Name</string>
    <string name="price">Order Price</string>
    <string name="quantity">Quantity</string>
    <string name="shop_photo">Shop photo</string>
    <string name="instrument">Musical instrument</string>
    <string name="currency">%d $</string>
    <string name="send_order">Send order</string>
</resources>
