<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/etName"
            style="@style/MyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/shop_photo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/shop" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/aclonica"
                android:gravity="center"
                android:rotation="-30"
                android:text="@string/sale"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            style="@style/MyTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/select_item" />

        <Spinner
            android:id="@+id/spItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <ImageView
            android:id="@+id/ivGoods"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/instrument"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/gitar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                style="@style/MyTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price" />

            <TextView
                android:id="@+id/textView4"
                style="@style/MyTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/quantity" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvPrice"
                style="@style/MyTextAppearance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="0$" />

            <Button
                android:id="@+id/btnRemove"
                style="@style/MyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="-" />

            <TextView
                android:id="@+id/tvQuantity"
                style="@style/MyTextAppearance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/MyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="+" />


        </LinearLayout>

        <Button
            android:id="@+id/btnCard"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_to_card" />


    </LinearLayout>
</ScrollView>